--- a/AutoTradingRobotDeamon/AutoTradingRobotDeamon.vcxproj.filters
+++ b/AutoTradingRobotDeamon/AutoTradingRobotDeamon.vcxproj.filters
@@ -43,9 +43,21 @@
     <ClCompile Include="GeneratedFiles\Release\moc_TcpServer.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_tcp_server_private.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_tcp_server_private.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="tcp_server_private.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="TcpServer.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="tcp_server_private.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
