守护程序完成

--- a/AutoTradingRobotDeamon/AutoTradingRobotDeamon.vcxproj.filters
+++ b/AutoTradingRobotDeamon/AutoTradingRobotDeamon.vcxproj.filters
@@ -55,6 +55,12 @@
     <ClCompile Include="PingPang.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_PingPang.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_PingPang.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="TcpServer.h">
@@ -63,10 +69,8 @@
     <CustomBuild Include="tcp_server_private.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="PingPang.h">
+    <CustomBuild Include="PingPang.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
+    </CustomBuild>
   </ItemGroup>
 </Project>
