--- a/AutoTradingRobotDeamon/AutoTradingRobotDeamon.vcxproj
+++ b/AutoTradingRobotDeamon/AutoTradingRobotDeamon.vcxproj
@@ -231,7 +231,7 @@
   </ImportGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties MocDir=".\GeneratedFiles\$(ConfigurationName)" UicDir=".\GeneratedFiles" RccDir=".\GeneratedFiles" lupdateOptions="" lupdateOnBuild="0" lreleaseOptions="" Qt5Version_x0020_x64="Qt5.12.3" MocOptions="" />
+      <UserProperties MocDir=".\GeneratedFiles\$(ConfigurationName)" UicDir=".\GeneratedFiles" RccDir=".\GeneratedFiles" lupdateOptions="" lupdateOnBuild="0" lreleaseOptions="" Qt5Version_x0020_Win32="Qt5.8.0" Qt5Version_x0020_x64="Qt5.12.3" MocOptions="" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
